fix for feedback items 5 and 7: * move search to float on top with stylistic changes * whitespace in the header (+1 squashed commit) Squashed commits: [6a26d32] changes that address items 1, 2, 6, 8, and 9 of latest feedback

--- a/webapp/sass/components/_emoticons.scss
+++ b/webapp/sass/components/_emoticons.scss
@@ -52,12 +52,37 @@
     position: absolute;
     z-index: 40;
     right: 1%;
-    width: 315px;
+    width: 278px;
     border: 1px solid;
     min-height: 298px;
     border-radius: 3px;
+
+    .emoji-picker__search-container {
+        position: relative;
+
+        .emoji-picker__search-icon {
+            padding-left: 6px;
+            padding-top: 6px;
+            position: absolute;
+            font-size: 13px;
+        }
+
+
+    }
 }
 
+.emoji-picker__search {
+    border-width: 1px 0px 1px 0px;
+    border-style: solid;
+    padding: 2px 0 2px 25px;
+    width: 100%;
+    height: 25px;
+    font-size: 12px;
+
+    &:focus{
+        outline: none;
+    }
+}
 
 .emoji-picker {
     display: flex;
@@ -66,20 +91,33 @@
     position: absolute;
     top: -347px;
     right: 0px;
-    width: 315px;
+    width: 278px;
     border: 1px solid;
     border-radius: 3px;
+
+    .emoji-picker__search-container {
+        position: relative;
+
+        .emoji-picker__search-icon {
+            padding-left: 6px;
+            padding-top: 6px;
+            position: absolute;
+            font-size: 13px;
+        }
+
+
+    }
 }
 
 .emoji-picker__categories {
-    border-bottom: 1px solid;
     flex-grow: 0;
     flex-shrink: 0;
 
     .emoji-picker__category {
         color: #333333;
         display: inline-block;
-        margin: 3px 8px;
+        text-align: center;
+        margin: 3px 6px;
         width: 15px;
         font-size: 16px;
 
@@ -93,37 +131,17 @@
 .emoji-picker__items {
     max-height: 262px;
     overflow: auto;
-    padding: 8px;
+    padding: 0px 8px 8px 8px;
     position: relative;
 
-    .emoji-picker__search-container {
-        position: relative;
 
-        .emoji-picker__search-icon {
-            padding-left: 6px;
-            padding-top: 6px;
-            position: absolute;
-            font-size: 13px;
-        }
-
-        .emoji-picker__search {
-            border: 1px solid;
-            padding: 2px 0 2px 25px;
-            width: 100%;
-            height: 25px;
-            font-size: 12px;
-
-            &:focus{
-                outline: none;
-            }
-        }
-    }
 
     .emoji-picker__category-header {
         font-size: 12px;
         font-weight: bold;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-top: 3px;
+        margin-bottom: 6px;
+        padding-top: 3px;
     }
 
     .emoji-picker__item {
@@ -151,6 +169,7 @@
         max-width: 42px;
         position: absolute;
         padding-top: 4px;
+        padding-right: 4px;
     }
 
     .emoji-picker__preview-name {
